Upgraded to Spring AI 1.0.0-M6
Added support for binding to MCP Servers